--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "seao-scraper",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "jsdom": "0.2.13",
-    "nodemailer": "0.3.14",
-    "sqlite3": "2.1.1",
-    "redis": "0.8.2",
-    "nohm": "~0.9.1"
+    "mongoose": "3.3.1"
   },
   "engines": {
     "node": "0.8.x",
