--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "jsdom": "0.2.13",
-    "mongoose": "3.3.1"
+    "mongoose": "3.3.1",
+    "step": "0.0.5"
   },
   "engines": {
     "node": "0.8.x",
