--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "jsdom": "0.2.13",
     "mongoose": "3.3.1",
-    "step": "0.0.5"
+    "step": "0.0.5",
+    "async": "~0.1.22"
   },
   "engines": {
     "node": "0.8.x",
