--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "jsdom": "0.2.13",
     "mongoose": "3.3.1",
     "step": "0.0.5",
-    "async": "~0.1.22"
+    "async": "~0.1.22",
+    "connect": "2.x",
+    "flask-router": "0.x"
   },
   "engines": {
     "node": "0.8.x",
