--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "step": "0.0.5",
     "async": "~0.1.22",
     "connect": "2.x",
-    "flask-router": "0.x"
+    "flask-router": "0.x",
+    "timezone-js": "0.4.4"
   },
   "engines": {
     "node": "0.8.x",
