--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "async": "~0.1.22",
     "connect": "2.x",
     "flask-router": "0.x",
-    "timezone-js": "0.4.4"
+    "timezone-js": "0.4.4",
+    "ap": "0.1.0"
   },
   "engines": {
     "node": "0.8.x",
